_stylus/partials/_footer.styl
/* ==========================================================================
   Footer
   ========================================================================== */

.footer-container {
    width: 100%;
    /*background-color: #0b0b0b;*/
    position: relative;
    margin-top: -25px;

    a{
        &:hover{
            text-decoration: underline;
        }
    }

    .wrapper {
        color: #000;
        background-color: #fff;
        width: 100%;
        padding: 1rem;
        height: 90px;
    }

    .footer-content {
        padding: 0 2rem;
    }

    asside {
        float: left;
    }

    .logo-desc {
        font-size: .7rem;
    }

    .footer-desc {
        line-height: .8rem;
        font-family: Georgia;
        white-space: nowrap;
        float: left;
        padding: .8rem;
    }

    .footer-logo {
        float: left;
    }

    .social {
        height: 20px;
        margin: 1rem 0.7rem;

        iframe {
            //margin: 0;
        }

        .fb-like {
            position: relative;
            top: -9px;
        }
    }

    .js-logo {
        float: right;
    }

    .credits {
        color: #fff;
        text-align: right;
        font-weight: bold;
        font-size: .7rem;

        .designed-by {
            color: fullColor;
            margin-left: 10px;

            a {
                color: fullColor;
            }
        }

        a {
            color: #fff;
            text-decoration: underline;
        }
    }
}

/* ==========================================================================
   Footer Media Queries
   ========================================================================== */

@media large {
    .footer-container {
        .credits, .footer-content {
            width: 1026px; /* 1140px - 10% for margins */
            margin: auto;
        }

        .credits {
            padding-right: 100px;
        }
    }
}

